# alchemy

./: .gitignore  DESIGN.md  README.md  RELEASE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml  homebrew.yml  release.yml
demo/: DEMO-SCRIPT.md
demo/dadgarcorp/: competitive-landscape-june-2026.md  customer-interviews-spring-2026.md  eng_capacity_h2_notes.txt  press-release-draft-2.0.md  pricing-strategy-2.0.md  q2-2026-metrics-review.md  support-escalations-june-2026.md  timberline-q3-roadmap.md
docs/: ARCHITECTURE.md  RFC-artifact-renderers.md  RFC-audio-overview.md  RFC-cider-tools.md  RFC-document-surface.md  RFC-git-sources.md  RFC-inference-providers.md  RFC-infinite-context.md  RFC-macos-integrations.md  RFC-mcp-server.md  RFC-meta-chat.md  RFC-note-curator.md  RFC-obsidian-notion.md  RFC-page-capture.md  RFC-retrieval-maturity.md  RFC-sync-backend.md  RFC-voice-chat.md  index.html  privacy.html
extension/chrome/: README.md  STORE.md  background.js  manifest.json
scripts/: build-fm-sidecar.sh  check-px-type.sh  contrast-audit.js  contrast-audit.md  fetch-pdfium.sh  notarize-local.sh  release.sh
sidecar/alchemy-fm/: Package.swift
sidecar/alchemy-fm/Sources/alchemy-fm/: main.swift
skills/alchemy/: SKILL.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/evals/datasets/: fixture-core.json  fixture-hard.json
src-tauri/icons/: Assets.car  icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/src/: agent.rs  capture.rs  commands.rs  connectors.rs  db.rs  evals.rs  filesearch.rs  gist.rs  git.rs  grepsearch.rs  ingest.rs  integrations.rs  lib.rs  mac.rs  main.rs  mcp.rs  menu.rs  models.rs  notion.rs  outline.rs  pdf.rs  rag.rs  retrieval_eval.rs  router.rs  services.rs  spotlight.rs  templates.rs  tests.rs  textsize.rs  trace.rs  tts.rs
src-tauri/src/ai/: local_embed.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/commands/: reports.rs
src-tauri/src/inference/: agent_cli.rs  budget.rs  fm.rs  gateway.rs  mod.rs  ollama.rs
src-tauri/tests/fixtures/: boxnote_new.boxnote  boxnote_old.boxnote
src/components/: AddSourceModal.tsx  AlchemyHero.tsx  AmbientRail.tsx  AudioNote.tsx  ChatPanel.tsx  CommandPalette.tsx  ConfigureChatModal.tsx  DevBadge.tsx  DitherBackground.tsx  ExternalAddModal.tsx  FileDrop.tsx  Flashcards.tsx  HealthBanner.tsx  HomeReportsFeed.tsx  HomeView.tsx  ImportOkfModal.tsx  MacConnect.tsx  Markdown.tsx  MigrationOverlay.tsx  MindMap.tsx  NoteWindow.tsx  Onboarding.tsx  QuizView.tsx  ReaderPane.tsx  Reports.tsx  RichEditor.tsx  SettingsDialog.tsx  ShellIntegrationBoundary.tsx  SidebarRails.tsx  SlideDeck.tsx  SourceViewer.tsx  SourcesPanel.tsx  StudioNoteViewer.tsx  StudioPanel.tsx  Workspace.tsx  printExport.tsx  studioArtifacts.tsx  ui.tsx  useHomeActivity.ts
src/components/settings/: ModelsTab.tsx  SettingsTabs.tsx
src/lib/: api.ts  epigraph.ts  errors.ts  notify.ts  slashCommands.ts  sound.ts  sourceIcon.tsx  store.ts  storeTypes.ts  textScale.ts  themes.ts  types.ts  updates.ts  utils.ts
