[package]
name = "alchemy"
version = "0.11.0"
description = "Local-first research notebook inspired by NotebookLM — RAG over your sources, powered by Ollama"
authors = ["thrashr888"]
license = "MPL-2.0"
repository = "https://github.com/thrashr888/alchemy"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alchemy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lancedb = "0.30.0"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
futures = "0.3.32"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
arrow-array = "58"
arrow-schema = "58"
pdf-extract = "0.12.0"
calamine = "0.26"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
pdfium-render = { version = "0.8", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
futures-util = "0.3.32"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tauri-plugin-debug-bridge = { version = "0.4.1", optional = true }
model2vec-rs = "0.2.1"
tokio-util = { version = "0.7.18", default-features = false }
# Readability-style article extraction for URL sources. Built on dom_query,
# which is already in the tree via tauri-utils.
dom_smoothie = "0.18"
csv = "1"
percent-encoding = "2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

# Embedded MCP server for agent access (see docs/RFC-mcp-server.md):
# official Rust MCP SDK + axum to host the streamable-HTTP transport.
rmcp = { version = "2.1", features = ["transport-streamable-http-server"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }

# Tiny pure-Rust WAV reader/writer — stitches per-line TTS output into one
# Audio Overview episode (see tts.rs).
hound = "3"
# Kokoro-82M inference for Audio Overview voices: ort (ONNX) + misaki-rs G2P.
# default-features = false is load-bearing: the default `g2p-espeak` feature
# links espeak-ng, which is GPL-3.0 — without it the tree is Apache/MIT only
# (misaki's dictionary handles G2P). Model downloads on first use like the
# built-in embedder.
kokoro-en = { version = "0.1.4", default-features = false }

# Already in the tree via tauri/wry — used to re-apply the traffic-light
# inset after webview reloads reset it (see commands::fix_traffic_lights).
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3"

[features]
# Dev-only: exposes the debug bridge for CLI automation/inspection.
debug = ["dep:tauri-plugin-debug-bridge"]

# Faster dev builds: keep file:line for our own code (line-tables) but skip
# debuginfo for the heavy dependency tree (lance/arrow/datafusion), which is
# the bulk of compile + link time and target size.
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false


